<RelativeLayout
    xmlns:android           ="http://schemas.android.com/apk/res/android"
    xmlns:tools             ="http://schemas.android.com/tools"
    android:layout_width    ="match_parent"
    android:layout_height   ="match_parent"
    android:background      ="@android:color/white"
    android:clickable       ="true">

    <RelativeLayout
        android:id              ="@+id/bar"
        android:layout_width    ="match_parent"
        android:layout_height   ="50dp"
        android:background      ="@color/colorPrimary">

        <TextView
            android:id                      ="@+id/title"
            android:layout_width            ="match_parent"
            android:layout_height           ="wrap_content"
            android:layout_centerVertical   ="true"
            android:textSize                ="25sp"
            android:textStyle               ="bold"
            android:textColor               ="@android:color/white"
            android:text                    ="@string/add_contact"
            android:paddingLeft             ="10dp"
            android:paddingRight            ="10dp" />

        <!-- EditText about filter by country name -->
        <EditText
            android:id                      ="@+id/search"
            android:layout_width            ="match_parent"
            android:layout_height           ="50dp"
            android:paddingLeft             ="10dp"
            android:paddingRight            ="10dp"
            android:textColorHint           ="@android:color/darker_gray"
            android:inputType               ="text"
            android:hint                    ="@string/search"
            android:visibility              ="invisible"/>

    </RelativeLayout>

    <RelativeLayout
        android:id              ="@+id/main_layout"
        android:layout_width    ="match_parent"
        android:layout_height   ="match_parent"
        android:layout_below    ="@+id/bar">

        <ScrollView
            android:layout_width    ="match_parent"
            android:layout_height   ="match_parent">

            <LinearLayout
                android:layout_width    ="match_parent"
                android:layout_height   ="wrap_content"
                android:orientation     ="vertical"
                android:padding         ="40dp"
                android:background      ="@android:color/white"
                android:clickable       ="true"
                android:focusable       ="true"
                tools:context           ="com.example.stoycho.phonebook.activities.RegistrationActivity">


                <RelativeLayout
                    android:layout_width    ="match_parent"
                    android:layout_height   ="70dp"
                    android:orientation     ="horizontal">

                    <TextView
                        android:id                      ="@+id/first_name_txt"
                        android:layout_width            ="wrap_content"
                        android:layout_height           ="wrap_content"
                        android:paddingLeft             ="2dp"
                        android:paddingRight            ="2dp"
                        android:paddingBottom           ="5dp"
                        android:layout_centerVertical   ="true"
                        android:text                    ="@string/info_first_name"
                        android:textColor               ="@android:color/black"
                        android:textSize                ="20sp" />

                    <EditText
                        android:id              ="@+id/first_name"
                        android:layout_width    ="match_parent"
                        android:layout_height   ="40dp"
                        android:textColorHint   ="@android:color/darker_gray"
                        android:paddingTop      ="5dp"
                        android:layout_centerVertical="true"
                        android:imeOptions      ="actionNext"
                        android:maxLines        ="1"
                        android:inputType       ="text"
                        android:nextFocusDown   ="@+id/last_name" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width        ="match_parent"
                    android:layout_height       ="70dp"
                    android:orientation         ="horizontal">

                    <TextView
                        android:id                      ="@+id/last_name_txt"
                        android:layout_width            ="wrap_content"
                        android:layout_height           ="wrap_content"
                        android:paddingLeft             ="2dp"
                        android:paddingRight            ="2dp"
                        android:paddingBottom           ="5dp"
                        android:layout_centerVertical   ="true"
                        android:text                    ="@string/info_last_name"
                        android:textColor               ="@android:color/black"
                        android:textSize                ="20sp" />

                    <EditText
                        android:id              ="@+id/last_name"
                        android:layout_width    ="match_parent"
                        android:layout_height   ="40dp"
                        android:layout_centerVertical="true"
                        android:textColorHint   ="@android:color/darker_gray"
                        android:paddingTop      ="5dp"
                        android:lines           ="1"
                        android:maxLines        ="1"
                        android:inputType       ="text"
                        android:nextFocusDown   ="@+id/email" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width        ="match_parent"
                    android:layout_height       ="60dp"
                    android:orientation         ="vertical"
                    android:gravity             ="center">

                    <TextView
                        android:id              ="@+id/country_txt"
                        android:layout_width    ="match_parent"
                        android:layout_height   ="wrap_content"
                        android:text            ="@string/info_country"
                        android:textColor       ="@android:color/darker_gray"
                        android:textSize        ="16sp"
                        android:paddingLeft     ="2dp"
                        android:paddingRight    ="2dp"
                        android:visibility      ="gone"/>

                    <EditText
                        android:id              ="@+id/country"
                        android:layout_width    ="match_parent"
                        android:layout_height   ="40dp"
                        android:textColorHint   ="@android:color/black"
                        android:hint            ="@string/country"
                        android:lines           ="1"
                        android:focusable       ="false"
                        android:drawableRight   ="@mipmap/ic_keyboard_arrow_down_black_24dp"
                        android:inputType       ="text" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width        ="match_parent"
                    android:layout_height       ="70dp">

                    <TextView
                        android:id                      ="@+id/email_txt"
                        android:layout_width            ="wrap_content"
                        android:layout_height           ="wrap_content"
                        android:paddingLeft             ="2dp"
                        android:paddingRight            ="2dp"
                        android:paddingBottom           ="5dp"
                        android:layout_centerVertical   ="true"
                        android:text                    ="@string/info_email"
                        android:textColor               ="@android:color/black"
                        android:textSize                ="20sp" />

                    <EditText
                        android:id              ="@+id/email"
                        android:layout_width    ="match_parent"
                        android:layout_height   ="40dp"
                        android:layout_centerVertical   ="true"
                        android:textColorHint   ="@android:color/darker_gray"
                        android:maxLines        ="1"
                        android:inputType       ="textEmailAddress" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width        ="match_parent"
                    android:layout_height       ="70dp">

                    <TextView
                        android:id                      ="@+id/phone_txt"
                        android:layout_width            ="wrap_content"
                        android:layout_height           ="wrap_content"
                        android:layout_centerVertical   ="true"
                        android:paddingLeft             ="2dp"
                        android:paddingRight            ="2dp"
                        android:paddingBottom           ="5dp"
                        android:text                    ="@string/info_phone_number"
                        android:textColor               ="@android:color/black"
                        android:textSize                ="20sp" />

                    <!-- TextView about calling code of country -->
                    <TextView
                        android:id                      ="@+id/callingCode"
                        android:layout_width            ="match_parent"
                        android:layout_height           ="wrap_content"
                        android:layout_toLeftOf         ="@id/phone_txt"
                        android:layout_centerVertical   ="true"
                        android:paddingRight            ="2dp"
                        android:paddingLeft             ="2dp"
                        android:textSize                ="17sp"
                        android:visibility              ="visible"/>

                    <!-- TextView about phone number of contact -->
                    <EditText
                        android:id                      ="@+id/phone_number"
                        android:layout_width            ="match_parent"
                        android:layout_height           ="40dp"
                        android:layout_centerVertical   ="true"
                        android:textColorHint           ="@android:color/darker_gray"
                        android:lines                   ="1"
                        android:inputType               ="phone" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width        ="match_parent"
                    android:layout_height       ="wrap_content">

                    <!-- Radio group about selecting gender -->
                    <TextView
                        android:id              ="@+id/gender_txt"
                        android:layout_width    ="wrap_content"
                        android:layout_height   ="wrap_content"
                        android:text            ="@string/info_gender"
                        android:textSize        ="17sp"
                        android:textColor       ="@android:color/black" />

                    <!-- Radio group about filter by gender -->
                    <RadioGroup
                        android:id              ="@+id/gender_radio"
                        android:layout_width    ="match_parent"
                        android:layout_height   ="wrap_content"
                        android:layout_below    ="@+id/gender_txt"
                        android:layout_toRightOf="@+id/gender_txt"
                        android:layout_toEndOf  ="@id/gender_txt"
                        android:orientation     ="vertical"
                        android:checkedButton   ="@+id/all"
                        android:visibility      ="visible">

                        <RadioButton
                            android:id              ="@+id/male"
                            android:layout_width    ="wrap_content"
                            android:layout_height   ="wrap_content"
                            android:paddingRight    ="5dp"
                            android:paddingLeft     ="5dp"
                            android:text            ="@string/male" />

                        <RadioButton
                            android:id              ="@+id/female"
                            android:layout_width    ="wrap_content"
                            android:layout_height   ="wrap_content"
                            android:paddingLeft     ="5dp"
                            android:paddingRight    ="5dp"
                            android:text            ="@string/female" />

                    </RadioGroup>

                </RelativeLayout>

            </LinearLayout>
        </ScrollView>

        <Button
            android:id                      ="@+id/add"
            android:layout_width            ="wrap_content"
            android:layout_height           ="wrap_content"
            android:layout_marginTop        ="10dp"
            android:layout_gravity          ="right"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text                    ="@string/save"
            android:textColor               ="@color/button_text_selector"
            android:layout_marginRight      ="10dp"
            android:layout_marginBottom     ="10dp"
            android:background              ="@drawable/button_selector" />

        <Button
            android:id                      ="@+id/delete"
            android:layout_width            ="wrap_content"
            android:layout_height           ="wrap_content"
            android:layout_marginTop        ="10dp"
            android:layout_gravity          ="right"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft  ="true"
            android:text                    ="@string/delete"
            android:textColor               ="@color/button_text_selector"
            android:layout_marginLeft       ="10dp"
            android:layout_marginBottom     ="10dp"
            android:background              ="@drawable/button_selector"
            android:visibility              ="invisible"/>

    </RelativeLayout>

</RelativeLayout>
